--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">InstaTexnopos</string>
     <string name="input_your_email">Input your email</string>
     <string name="input_your_password">Input your password</string>
-    <string name="input_your_password">Input your password</string>
     <string name="confirm_your_password">Confirm your password</string>
+    <string name="fill_the_field">Fill th field</string>
 </resources>
