--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="input_your_password">Input your password</string>
     <string name="confirm_your_password">Confirm your password</string>
     <string name="fill_the_field">Fill th field</string>
+    <string name="btn_menu_home">Home</string>
+    <string name="btn_menu_search">Search</string>
+    <string name="btn_menu_post">Post</string>
+    <string name="btn_menu_favorite">Like</string>
+    <string name="btn_menu_profil">Profil</string>
 </resources>
