--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
     <string name="posts">Публикации</string>
     <string name="followers">Подписчики</string>
     <string name="following">Подписки</string>
-    <string name="_profile">Редактировать профиль </string>
+    <string name="edit_profile">Редактировать профиль </string>
 </resources>
